# pegador-de-bandeiras

./: README.md  package.xml
config/: controller_config.yaml
description/: robot.urdf.xacro
docker/: Dockerfile  docker-compose.yml
launch/: editar_mundo.launch.py
pegador_de_bandeiras_mk1/: controle_robo.py  setup.cfg  setup.py
pegador_de_bandeiras_mk1/launch/: carrega_robo.launch.py  inicia_simulacao.launch.py  teste_urdf.launch.py
pegador_de_bandeiras_mk1/pegador_de_bandeiras_mk1/: controle_robo.py
