<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pegador_de_bandeiras_mk1</name>
  <version>1.0.0</version>
  <description>Melhor pegador de bandeiras ja visto</description>
  <maintainer email="caioctassis@gmail.com">CaioCesar</maintainer>
  <maintainer email="">AndreMurakami</maintainer>
  <maintainer email="joao_lopes@usp.br">JoaoLopes</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend> 
  <depend>sensor_msgs</depend>   
  <depend>nav_msgs</depend>      
  <depend>cv_bridge</depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
